CSS and HTML is ready. - Sound - Play/Pause - Increase - Decrease - Mobile - Time

--- a/src/public/app/components/home/homeView.html
+++ b/src/public/app/components/home/homeView.html
@@ -1,5 +1,48 @@
 
 <section class="pomodoro" id="pomodoro">
 
+    <img src="/dist/img/sound-on.svg" class="sound-control">
+
+    <div class="frame-pomodoro-clock">
+
+        <div class="juice">
+            <div class="content"></div>
+            <div class="control-time">
+                <img src="/dist/img/play.svg">
+            </div>
+        </div>
+
+        <div class="tomato">
+            <div class="time">24:59</div>
+        </div>
+    </div>
+
+    <div class="controls">
+        <div class="session">
+            <div class="text">
+                session
+            </div>
+            <div class="up-down">
+                <img src="/dist/img/sort-up.svg">
+                <img src="/dist/img/sort-down.svg">
+            </div>
+            25
+        </div>
+
+        <div class="break">
+            <div class="text">
+                break
+            </div>
+            <div class="up-down">
+                <img src="/dist/img/sort-up.svg">
+                <img src="/dist/img/sort-down.svg">
+            </div>
+            05
+        </div>
+    </div>
+
+    <header>
+        Pomodoro<span>MS</span>
+    </header>
 
 </section>
