--- a/src/public/assets/scss/partials/_variables.scss
+++ b/src/public/assets/scss/partials/_variables.scss
@@ -1,22 +1,10 @@
 
 // === COLORS ===
-$calculator-back-color: white;
-$operators-back-color: #f8f7f7;
-$darken-font-color: #666;
-$light-font-color: #c3c3c3;
-$commom-digits-color: #979696;
-$border-digits-color: #ebf2f5;
-$shadow-color-light: #ebe8e8;
-$shadow-color-darken: #e1dfdf;
-$red-error-color: #ff0000;
+$background-screen: #f6f4f4;
+$red: #ef453d;
+$time-color: #f1f0f0;
+$light-color: #c6c4c4;
 
 
 // === FONTS ===
-$operatores-top-font: 'Inconsolata', monospace;
-$commom-digits-font: 'Roboto', sans-serif;
-
-// === SIZES ===
-$operator-line-height: 58px;
-$commom-line-height: 64px;
-$operator-font-size: 55px;
-$digit-font-size: 26px;
+$roboto-font: 'Roboto', sans-serif;
