--- a/src/public/assets/scss/styles.scss
+++ b/src/public/assets/scss/styles.scss
@@ -3,9 +3,7 @@
 @import "bower_components/css-ripple-effect/src/ripple.less";
 @import "partials/variables";
 @import "partials/mixins";
-@import "partials/inheritance";
 
-@include google-font("Inconsolata", "400,700");
 @include google-font("Roboto", "100,300,400,700");
 
 * {
@@ -14,7 +12,7 @@
 
 
 body {
-  background-color: #f6f4f4;
+  background-color: $background-screen;
   width: 100%;
   height: 100%;
   margin: 0;
@@ -24,4 +22,189 @@ body {
 section.pomodoro{
   width: 100vw;
   height: 100vh;
+  overflow: auto;
+
+  .sound-control{
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    cursor: pointer;
+  }
+
+  .frame-pomodoro-clock{
+    width: 327px;
+    height: 422px;
+    position: relative;
+    display: flex;
+    left: 50%;
+    margin: 4vh 0 0 -163px;
+    align-items: flex-end;
+    justify-content: center;
+    font-family: $roboto-font;
+
+
+    @media (min-width: 600px) {
+      margin: 50px 0 0 -91px;
+    }
+
+    .juice{
+      width: 181px;
+      height: 418px;
+      background: url(../../dist/img/juice.svg) no-repeat left bottom;
+      position: relative;
+      cursor: pointer;
+
+      .content{
+        width: 142px;
+        height: 200px;
+        background-color: $red;
+        position: absolute;
+        bottom: 43px;
+        left: 50%;
+        margin-left: -69px;
+        z-index: 400;
+      }
+
+      .control-time{
+        width: 100%;
+        height: 325px;
+        background-color: rgba(#fff, 0.5);
+        z-index: 500;
+        position: absolute;
+        bottom: 0;
+        line-height: 325px;
+        text-align: center;
+        display: none;
+
+        img{
+          width: 66px;
+          height: 66px;
+        }
+      }
+
+      &:hover{
+        .control-time{
+          display: block;
+        }
+      }
+    }
+
+    .tomato{
+      @include background-size(cover);
+      width: 146px;
+      height: 196px;
+      background: url(../../dist/img/tomato.svg) no-repeat left bottom;
+      color: $time-color;
+
+      .time{
+        width: calc(100% - 6px);
+        height: 50px;
+        line-height: 50px;
+        text-align: center;
+        font-size: 35px;
+        font-weight: 700;
+        margin-top: 92px;
+        margin-left: 0;
+      }
+
+    }
+
+  }
+
+  .controls{
+    width: 236px;
+    height: 80px;
+    line-height: 80px;
+    margin: 50px auto 0 auto;
+    text-align: center;
+    font-size: 30px;
+    color: #666;
+    font-weight: bold;
+    font-family: $roboto-font;
+
+    .up-down{
+      position: absolute;
+      height: 80px;
+      width: 118px;
+      display: none;
+
+      img{
+        width: 40px;
+        position: absolute;
+        left: 50%;
+        margin-left: -20px;
+
+        &:first-child{
+          top: -22px;
+        }
+
+        &:nth-child(2){
+          bottom: -22px;
+        }
+      }
+    }
+
+    .text{
+      width: 20px;
+      position: absolute;
+      left: 0;
+      height: 80px;
+      writing-mode: vertical-rl;
+      -moz-writing-mode: vertical-rl;
+      -webkit-writing-mode: vertical-rl;
+      font-size: 20px;
+      font-weight: 100;
+      color: $red;
+    }
+
+    .session{
+      width: 118px;
+      float: left;
+      height: 80px;
+      background-color: #c8c8c8;
+      position: relative;
+      cursor: pointer;
+
+      &:hover{
+        .up-down{
+          display: block;
+        }
+      }
+    }
+
+    .break{
+      width: 118px;
+      float: left;
+      height: 80px;
+      background-color: #dfdfde;
+      position: relative;
+      cursor: pointer;
+
+      .text{
+        right: -60px;
+      }
+
+      &:hover{
+        .up-down{
+          display: block;
+        }
+      }
+    }
+  }
+}
+
+header{
+  text-align: center;
+  margin-top: 50px;
+  color: $light-color;
+  font-family: $roboto-font;
+  font-size: 17px;
+  font-weight: 100;
+  margin-bottom: 30px;
+
+  span{
+    font-weight: 400;
+  }
 }
