--- a/src/public/assets/scss/partials/_variables.scss
+++ b/src/public/assets/scss/partials/_variables.scss
@@ -4,6 +4,8 @@ $background-screen: #f6f4f4;
 $red: #ef453d;
 $time-color: #f1f0f0;
 $light-color: #c6c4c4;
+$control-first-color: #c8c8c8;
+$control-second-color: #dfdfde;
 
 
 // === FONTS ===
