--- a/src/public/assets/scss/styles.scss
+++ b/src/public/assets/scss/styles.scss
@@ -58,7 +58,6 @@ section.pomodoro{
 
       .content{
         width: 142px;
-        height: 200px;
         background-color: $red;
         position: absolute;
         bottom: 43px;
@@ -76,12 +75,15 @@ section.pomodoro{
         bottom: 0;
         line-height: 325px;
         text-align: center;
-        display: none;
 
         img{
           width: 66px;
           height: 66px;
         }
+      }
+
+      .pause{
+        display: none;
       }
 
       &:hover{
@@ -97,6 +99,7 @@ section.pomodoro{
       height: 196px;
       background: url(../../dist/img/tomato.svg) no-repeat left bottom;
       color: $time-color;
+      position: relative;
 
       .time{
         width: calc(100% - 6px);
@@ -107,6 +110,20 @@ section.pomodoro{
         font-weight: 700;
         margin-top: 92px;
         margin-left: 0;
+      }
+
+      .show-local{
+        position: absolute;
+        top: -30px;
+        width: 80%;
+        height: 30px;
+        line-height: 30px;
+        color: $red;
+        text-transform: uppercase;
+        text-align: center;
+        font-size: 20px;
+        font-weight: 400;
+        letter-spacing: 1.1px;
       }
 
     }
@@ -163,7 +180,7 @@ section.pomodoro{
       width: 118px;
       float: left;
       height: 80px;
-      background-color: #c8c8c8;
+      background-color: $control-first-color;
       position: relative;
       cursor: pointer;
 
@@ -178,7 +195,7 @@ section.pomodoro{
       width: 118px;
       float: left;
       height: 80px;
-      background-color: #dfdfde;
+      background-color: $control-second-color;
       position: relative;
       cursor: pointer;
 
