--- a/src/public/assets/scss/styles.scss
+++ b/src/public/assets/scss/styles.scss
@@ -64,6 +64,7 @@ section.pomodoro{
         left: 50%;
         margin-left: -69px;
         z-index: 400;
+        transition: height 0.2s;
       }
 
       .control-time{
@@ -156,7 +157,9 @@ section.pomodoro{
       position: absolute;
       height: 80px;
       width: 118px;
-      display: none;
+      visibility: hidden;
+      opacity: 0;
+      transition: visibility 0s, opacity 0.3s linear;
 
       img{
         width: 40px;
@@ -197,7 +200,8 @@ section.pomodoro{
 
       &:hover{
         .up-down{
-          display: block;
+          visibility: visible;
+          opacity: 1;
         }
       }
     }
@@ -216,7 +220,8 @@ section.pomodoro{
 
       &:hover{
         .up-down{
-          display: block;
+          visibility: visible;
+          opacity: 1;
         }
       }
     }
